--- a/index.html
+++ b/index.html
@@ -2,30 +2,24 @@
 <html>
 	<head>
 		<title> hello </title>
-        <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	
 	<body>
-		
-		<div class="navbar">
-			<div class="inner_navbar">
-				<div class="logo">
-					<a href="#">LOGO<span>ofCompany</span></a>
-				</div>
-				<div class="menu">
-					<ul>
-						<li><a href="#" class="active">Home</a></li>
-						<li><a href="#">Profile</a></li>
-						<li><a href="#">About</a></li>
-						<li><a href="#">Contact</a></li>
-						<li><a href="#">Services</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="hamburger">
-				<h3>=</h3>
-			</div>
-		</div>
+		<!-- Navbar -->
+    <div class="navbar">
+      <div class="container flex">
+          <h1 class="logo">Loruki.</h1>
+          <nav>
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="features.html">Features</a></li>
+                  <li><a href="docs.html">Docs</a></li>
+              </ul>
+          </nav>
+      </div>
+  </div>
 
 		<div class="wrapper">
 			<div class="hero-text">
