--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
 		<!-- Navbar -->
     <div class="navbar">
       <div class="container flex">
-          <h1 class="logo">Loruki.</h1>
+          <h1 class="logo">SkillLy.</h1>
           <nav>
               <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="features.html">Features</a></li>
-                  <li><a href="docs.html">Docs</a></li>
+                  <li><a href="index.html">LogIn</a></li>
+                  <li><a href="features.html">Sign Up</a></li>
               </ul>
           </nav>
       </div>
   </div>
 
 		<div class="wrapper">
+      <div class="container hero">
 			<div class="hero-text">
 				<h2>TEXT</h2>
 				<div class="subtext">dheeeeer saaaaaraaaa textttt</div>
-		    </div>
-		
         </div>
         
-        <div class="wrapper">
+      </div>
+		
+      </div>
+        
+        <div class="threeBoxLayout">
             <div class="mainHeading">3 BOX GENERIC</div>
 
             <div class="boxes">
