--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	</head>
 	
 	<body>
+
+    <div class="totalHero">
+
 		<!-- Navbar -->
     <div class="navbar">
       <div class="container flex">
@@ -20,17 +23,19 @@
       </div>
   </div>
 
-		<div class="wrapper">
-      <div class="container hero">
+
+		<div class="container">
 			<div class="hero-text">
 				<h2>TEXT</h2>
 				<div class="subtext">dheeeeer saaaaaraaaa textttt</div>
-        </div>
         
       </div>
-		
-      </div>
+		</div>
+
+    </div>
         
+
+
         <div class="threeBoxLayout">
             <div class="mainHeading">3 BOX GENERIC</div>
 
