--- a/index.html
+++ b/index.html
@@ -206,6 +206,9 @@
     </div>
 
         <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-		<script src="index.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/CSSRulePlugin.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
+		    <script src="index.js"></script>
 		</body>
 </html>
